--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -13,7 +13,8 @@ android {
         ndk {
             moduleName "music_effector"
             abiFilters "armeabi", "x86_64"
-            ldLibs "OpenSLES"
+            ldLibs "OpenSLES", "log"
+            stl "gnustl_shared"
         }
     }
     buildTypes {
