完成波表测试

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".activity.EffectorService" android:exported="false"/>
+        <service android:name=".service.EffectorService" android:exported="false"/>
 
     </application>
 
